[gd_scene load_steps=30 format=4 uid="uid://cg8l4angkunu5"]

[ext_resource type="Script" path="res://addons/libsm64-godot/mario/sm64_mario.gd" id="1_vy05d"]
[ext_resource type="FontFile" uid="uid://c25d003g01x4h" path="res://mario/Mario64.ttf" id="2_3w352"]
[ext_resource type="Shader" path="res://EnvironmentMap.gdshader" id="2_a6t65"]
[ext_resource type="Texture2D" uid="uid://dhp0h2p7egisy" path="res://mario/shadow.png" id="3_cdwnk"]
[ext_resource type="Texture2D" uid="uid://cwt81cb746m7q" path="res://mario/env_map_shiny_blurry.png" id="3_pcgp7"]
[ext_resource type="FontFile" uid="uid://bi3mvp2yj72db" path="res://mario/ui_lettering.png" id="4_p843u"]
[ext_resource type="Shader" path="res://mario/power_ui.gdshader" id="5_cfhc3"]
[ext_resource type="Texture2D" uid="uid://dyms68ekl5gio" path="res://mario/checkerboard.png" id="6_0vgae"]
[ext_resource type="Texture2D" uid="uid://bb6iaa2qu36la" path="res://mario/power_head_mask.png" id="7_mmu4j"]
[ext_resource type="Texture2D" uid="uid://cen8uruthosia" path="res://mario/power_text_mask.png" id="8_xynuk"]
[ext_resource type="Texture2D" uid="uid://csm3y75usd5u5" path="res://mario/health_slices.png" id="9_0e7ou"]
[ext_resource type="Shader" path="res://mario/health_slices.gdshader" id="9_03fle"]
[ext_resource type="Texture2D" uid="uid://u6j2nxksso1y" path="res://mario/checkpoint_guide.png" id="13_s5g3h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x706x"]
render_priority = 0
shader = ExtResource("2_a6t65")
shader_parameter/albedo = Color(0.729412, 0.611765, 0.345098, 0.392157)
shader_parameter/albedo_texture = ExtResource("3_pcgp7")

[sub_resource type="ArrayMesh" id="ArrayMesh_y756p"]
_surfaces = [{
"aabb": AABB(-0.715868, -0.826613, -6.35508, 1.43174, 1.65323, 4.35509),
"format": 34896613377,
"index_count": 102,
"index_data": PackedByteArray("AgAAAAEAAAAEAAUABAACAAMAAAACAAQACgARAAsACgAQABEAAQAIAAIAAQAGAAgABAALAAUABAAKAAsAAgAJAAMAAgAIAAkAAAAGAAEAAAAHAAYABQAHAAAABQALAAcAAwAKAAQAAwAJAAoAEQASAA0ACAAPAAkACAAOAA8ABwAMAAYABwANAAwACwANAAcACwARAA0ACQAQAAoACQAPABAABgAOAAgABgAMAA4ADwASABAADAASAA4AEAASABEADgASAA8ADQASAAwA"),
"lods": [0.860206, PackedByteArray("AAACAAQACgARAAcACgAPABEABwARAA0ABwANAAwABwAMAAgACAAMAA8ACAAPAAoAAgAHAAgABAAKAAcAAAAHAAIABAAHAAAAAgAKAAQAAgAIAAoADwANABEADAANAA8A")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 19,
"vertex_data": PackedByteArray("/3+TMv7/AACTMklZ/v8AAJMytab+/wAA/39rzf7/AABrzbWm/v8AAGvNSVn+/wAAiFpEbR1wAAD/f4haHXAAAIhaupIdcAAA/392pR1wAAB2pbqSHXAAAHalRG0dcAAAAAD/PyFrAAD/fwAAIWsAAAAA/78hawAA/3///yFrAAD///+/IWsAAP///z8hawAA/3//fwAAAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_pv5oi"]
resource_name = "level1_ref_Circle"
_surfaces = [{
"aabb": AABB(-0.715868, -0.826613, -6.35508, 1.43174, 1.65323, 4.35509),
"attribute_data": PackedByteArray("AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8="),
"format": 34896613399,
"index_count": 102,
"index_data": PackedByteArray("BQABAAMAAQAIAAoACAAFAAYAAQAFAAgAFAAiABYAFAAgACIAAgAQAAQAAgAMABAACQAXAAsACQAVABcABAATAAcABAAQABMAAAAMAAIAAAAOAAwACwAOAAAACwAXAA4ABwAVAAkABwATABUAIwAkABoAEQAeABIAEQAdAB4ADwAZAA0ADwAbABkAFgAbAA8AFgAiABsAEgAgABQAEgAeACAADQAdABEADQAZAB0AHwAkACEAGAAkABwAIQAkACMAHAAkAB8AGgAkABgA"),
"lods": [0.860206, PackedByteArray("AQAFAAgAFAAiAA8AFAAeACIADwAiABsADwAbABkADwAZAEUARQAZAB4ARQAeAEYAOQA/AEMAPABHAEAANwBBADoAPQBCADgAOwBIAD4AOwBEAEkATQBLAE8ASgBMAE4A")],
"material": SubResource("ShaderMaterial_x706x"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 80,
"vertex_data": PackedByteArray("/3+TMv7/RsT/f5My/v/+f5MySVn+/1zGkzJJWf7//n+TMrWm/v9cxpMytab+//5//39rzf7//n//f2vN/v9GxGvNtab+//5/a821pv7/XMZrzUlZ/v/+f2vNSVn+/1zGiFpEbR1wXMaIWkRtHXBbe/9/iFodcEbE/3+IWh1wIXqIWrqSHXBcxohaupIdcFt7/392pR1wIXr/f3alHXBGxHalupIdcFt7dqW6kh1wXMZ2pURtHXBbe3alRG0dcFzGAAD/PyFrWtcAAP8/IWtbe/9/AAAha1jR/38AACFrIXoAAP+/IWta1wAA/78ha1t7/3///yFrIXr/f///IWtY0f///78ha1t7////vyFrWtf///8/IWtbe////z8ha1rX/3//fwAA//92pbqSHXCAXP9/AAAha173/38AACFrrm3/f///IWvFev9///8ha/Hz////PyFrvvaTMrWm/v9KxZMytab+/yvFa821pv7/YsVrzbWm/v88xXalupIdcKFgdqW6kh1wIsV2pbqSHXBJxf9/AAAha734/38AACFreF3/f///IWs7av9///8ha/32////PyFrrfb/f5My/v/qxf9/kzL+/+jFkzK1pv7/WNCTMrWm/v/xxpMytab+/0nFa821pv7/4NRrzbWm/v/rx2vNtab+/0DF/3+IWh1w9dT/f4haHXBHyv9/iFodcMLF/3+IWh1w1MWIWrqSHXCm1YhaupIdcDnFiFq6kh1w+3h2pbqSHXBwbHalupIdcOLTdqW6kh1wUcV2pbqSHXD3xAAA/z8hazDz/38AACFr4/P/fwAAIWsQ9P9///8ha+X4/3///yFrSfn///8/IWsa8wAA/3//f///LC8rr/9////S0Cuv/3////9///////9//3///9LQ01D/f///LC/TUCwvK69PO067AAD/fwAA/3/S0Cuvr8ROu////3////9/r8SwRNLQ01BPO7BELC/TUNwy27JPO067AAD/fwAA/38izduyr8ROu////3////9/r8SwRCLNI01PO7BE3DIjTf///3+UnWriAd0CXfda9toC2PynBuYGZha2FzbTAtKCWPtYe34WgWmM64xrWpqj5Z0LYXQ66DtoVjCoT3RZc9kTo+vca81sTS2xLTHHJsam3yIfXaa8V8MULhOumfBlj26vbi9fMJ9P4PHhcfNQ89BGOLhHzCPLoyki1l2Vq2nUG+nilibL2LSX9pd2oUxeM/7t/22K8nSN2znauQsh817kI+SjulVEKj9MPsxjRZs6")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_y756p")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_658mp"]
render_priority = 0
shader = ExtResource("2_a6t65")
shader_parameter/albedo = Color(0.729412, 0.611765, 0.345098, 0.392157)
shader_parameter/albedo_texture = ExtResource("3_pcgp7")

[sub_resource type="ArrayMesh" id="ArrayMesh_c1twb"]
_surfaces = [{
"aabb": AABB(-0.475528, -0.135488, -0.5, 0.951057, 0.270975, 0.904508),
"format": 34896613377,
"index_count": 60,
"index_data": PackedByteArray("CgABAAAACgACAAEACgADAAIACgAEAAMACgAFAAQACgAGAAUACgAHAAYACgAIAAcACgAJAAgACgAAAAkACwAAAAEAAgALAAEACwACAAMABAALAAMABQALAAQACwAFAAYABwALAAYACwAHAAgACwAIAAkAAAALAAkA"),
"lods": [0.0994835, PackedByteArray("CgAFAAEACgAHAAUACgAJAAcACgABAAkABQALAAEACwAFAAcACwAHAAkAAQALAAkA"), 0.158132, PackedByteArray("CgAFAAEABQALAAEACwAFAAoAAQALAAoA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray("/3//fwAAAACTW/9/zFgAAAAA/3/IYQAAEEX/f6WhAADkMP9///8AAP9//3+qzgAAGs//f///AADuuv9/paEAAP///3/IYQAAa6T/f8xYAAD/f///go0AAP9/AACCjQAA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_5s6k3"]
resource_name = "level1_ref_Circle"
_surfaces = [{
"aabb": AABB(-0.475528, -0.135488, -0.5, 0.951057, 0.270975, 0.904508),
"attribute_data": PackedByteArray("/38AAJNbzFgAAMhhEEWloeQw////f6rOGs///+66paH//8hha6TMWP9/go3/f4KNk1vMWJNbzFiTW8xY/3+qzv9/qs7/f6rO/3+Cjf9/go3/f4KN/3+Cjf9/go3/f4KNk1vMWJNbzFiTW8xYk1vMWP9/qs7/f6rO/3+qzv9/qs7uuqWh7rqloe66paHuuqWha6TMWGukzFhrpMxYa6TMWP9/go3/f4KN/3+Cjf9/go3/f4KN/3+Cjf9/go3/f4KN"),
"format": 34896613399,
"index_count": 60,
"index_data": PackedByteArray("CgABAAAACgACAAEACgADAAIACgAEAAMACgAFAAQACgAGAAUACgAHAAYACgAIAAcACgAJAAgACgAAAAkACwAAAAEAAgALAAEACwACAAMABAALAAMABQALAAQACwAFAAYABwALAAYACwAHAAgACwAIAAkAAAALAAkA"),
"lods": [0.0994835, PackedByteArray("KAAcABgAKQAgAB0AKgAkACEAKwAZACUAHgAsABoALQAfACIALgAjACYAGwAvACcA"), 0.158132, PackedByteArray("EgAPAAwAEAAVAA0AFgARABMADgAXABQA")],
"material": SubResource("ShaderMaterial_658mp"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray("/3//fwAAAACTW/9/zFigBAAA/3/IYewNEEX/f6WhFz/kMP9////HZf9//3+qzv5/Gs//f///x2Xuuv9/paEXP////3/IYewNa6T/f8xYLQj/f///go3/v/9/AACCjf8/k1v/f8xYnTiTW/9/zFg4OJNb/3/MWL4G/3//f6rOElD/f/9/qs74Vf9//3+qzs9g/3///4KNb7r/f///go1Vsf9///+CjXPp/38AAIKNR0n/fwAAgo3QVP9/AACCjQUSk1v/f8xYezeTW/9/zFiRJZNb/3/MWFk1k1v/f8xYaRj/f/9/qs6GUP9//3+qzgRa/3//f6rOBlH/f/9/qs7pXu66/3+loWA+7rr/f6Wh3Tbuuv9/paF6P+66/3+lofQwa6T/f8xYKxprpP9/zFigIGuk/3/MWKEca6T/f8xYmhv/f///go20t/9///+CjTy1/3///4KNnsj/f///go34z/9/AACCjVJF/38AAIKNEEv/fwAAgo3+MP9/AACCjaws////f1Qr0I/nQBCTvGC1tfh4VuP/f///VmMHB7Y1Qh8QExc/ThrATP///38AAP9/yfgaZ9orVn+QlfEEdeyIk6kXqJfKYDUfIvPbjDzQPVAwyDFI4hTilAg690V7R4M4eP1UlxXm61TnKjJ/Si+lbj/kvpsj8SRxIhsim5YNaHKZ1d8NUDuiAbMnzTlxMmA/xd2wamfbp5mqB0hV4Bf1tFbsqJOI9Ih0PeI+Yu39EIIXFBaUsw5McQEe/mHvA+6D")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_c1twb")

[sub_resource type="LabelSettings" id="LabelSettings_ag55j"]
font = ExtResource("2_3w352")
font_size = 24
shadow_color = Color(0, 0, 0, 0.388235)
shadow_offset = Vector2(2, 2)

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_a3013"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_55yaj"]
height = 1.5

[sub_resource type="LabelSettings" id="LabelSettings_p2kxy"]
font = ExtResource("2_3w352")
font_size = 24
shadow_color = Color(0, 0, 0, 0.670588)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_6h3om"]
font = ExtResource("2_3w352")
font_size = 24
shadow_color = Color(0, 0, 0, 0.666667)
shadow_offset = Vector2(2, 2)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_iy0ix"]
height = 6.0
radius = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_46e2l"]
font = ExtResource("4_p843u")
font_size = 52

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7qgrv"]
shader = ExtResource("5_cfhc3")
shader_parameter/checkerRepeat = 12.0
shader_parameter/checkerRotate = -0.1
shader_parameter/outlineSize = 6.58
shader_parameter/checkerScrollSpeed = Vector2(0.2, -0.1)
shader_parameter/outlineColor = Color(0.447059, 0.745098, 0.917647, 1)
shader_parameter/topGradientCheck1 = Color(0.34902, 0.631373, 0.901961, 1)
shader_parameter/bottomGradientCheck1 = Color(0.207843, 0.356863, 0.490196, 1)
shader_parameter/topGradientCheck2 = Color(0.129412, 0.372549, 0.588235, 1)
shader_parameter/bottomGradientCheck2 = Color(0, 0.172549, 0.321569, 1)
shader_parameter/checkerTexture = ExtResource("6_0vgae")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ywjq4"]
shader = ExtResource("5_cfhc3")
shader_parameter/checkerRepeat = 16.0
shader_parameter/checkerRotate = 0.1
shader_parameter/outlineSize = -0.36
shader_parameter/checkerScrollSpeed = Vector2(-0.05, 0.15)
shader_parameter/outlineColor = Color(1, 1, 1, 1)
shader_parameter/topGradientCheck1 = Color(1, 1, 1, 1)
shader_parameter/bottomGradientCheck1 = Color(1, 1, 1, 1)
shader_parameter/topGradientCheck2 = Color(1, 0.858824, 0.866667, 1)
shader_parameter/bottomGradientCheck2 = Color(1, 1, 1, 1)
shader_parameter/checkerTexture = ExtResource("6_0vgae")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ya0m5"]
shader = ExtResource("9_03fle")
shader_parameter/wedges = 8.0

[node name="RandomMario" type="Node3D"]
script = ExtResource("1_vy05d")

[node name="star_arrow" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
mesh = SubResource("ArrayMesh_pv5oi")
skeleton = NodePath("")

[node name="StarMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, -4.37114e-09, -0.1, 0, 0.1, -4.37114e-09, 0, 0, 0)
mesh = SubResource("ArrayMesh_5s6k3")
skeleton = NodePath("")

[node name="SeedLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Current Seed: "
label_settings = SubResource("LabelSettings_ag55j")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPolyphonic_a3013")
autoplay = true
max_polyphony = 8

[node name="MarioCollision" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionCylinder" type="CollisionShape3D" parent="MarioCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.556764, 0)
shape = SubResource("CylinderShape3D_55yaj")

[node name="Decal" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -15.995, 0)
size = Vector3(1, 32, 1)
texture_albedo = ExtResource("3_cdwnk")
normal_fade = 0.5
upper_fade = 1e-05

[node name="HintText" type="Label" parent="."]
anchors_preset = -1
anchor_top = 0.747
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0239868
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
text = "Press A to spawn"
label_settings = SubResource("LabelSettings_p2kxy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HintText2" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_top = 0.747
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0239868
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
text = "Press A to keep playing"
label_settings = SubResource("LabelSettings_p2kxy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HintText3" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_top = 0.747
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 97.967
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
text = "Press B to generate new level"
label_settings = SubResource("LabelSettings_p2kxy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelTimer" type="Label" parent="."]
anchors_preset = -1
anchor_top = 0.015
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.225
grow_horizontal = 2
grow_vertical = 2
text = "40:02.394"
label_settings = SubResource("LabelSettings_6h3om")
horizontal_alignment = 1

[node name="SpawnLineCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
enabled = false
target_position = Vector3(0, -12, 0)

[node name="SpawnCast" type="ShapeCast3D" parent="."]
enabled = false
shape = SubResource("CylinderShape3D_iy0ix")
target_position = Vector3(0, -2, 0)
debug_shape_custom_color = Color(1, 1, 1, 1)

[node name="CoinCounter" type="Label" parent="."]
texture_filter = 1
texture_repeat = 1
anchors_preset = -1
anchor_left = 0.027
anchor_top = 0.05
anchor_right = 0.138
anchor_bottom = 0.108
offset_left = -0.0760002
offset_top = 0.0999985
offset_right = 0.0559845
offset_bottom = 0.0159988
text = "$*0"
label_settings = SubResource("LabelSettings_46e2l")

[node name="PowerDisp" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_7qgrv")
anchors_preset = -1
anchor_left = 0.833
anchor_top = 0.017
anchor_right = 0.912
anchor_bottom = 0.199
offset_left = -0.659058
offset_top = -0.322001
offset_right = 0.257935
offset_bottom = -0.534012
grow_horizontal = 2
size_flags_vertical = 0
texture = ExtResource("7_mmu4j")
expand_mode = 2
stretch_mode = 4

[node name="PowerText" type="TextureRect" parent="PowerDisp"]
material = SubResource("ShaderMaterial_ywjq4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
texture = ExtResource("8_xynuk")
expand_mode = 2
stretch_mode = 4

[node name="HealthWedges" type="TextureRect" parent="PowerDisp"]
material = SubResource("ShaderMaterial_ya0m5")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.279
anchor_top = 0.067
anchor_right = 0.771
anchor_bottom = 0.559
offset_left = 0.0512276
offset_top = -0.0737171
offset_right = -0.0287933
offset_bottom = -0.0640869
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
texture = ExtResource("9_0e7ou")
expand_mode = 2
stretch_mode = 4

[node name="CheckpointHelper" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.766
anchor_right = 0.205
anchor_bottom = 0.987
offset_left = 0.448
offset_top = 0.065979
offset_right = 0.119995
offset_bottom = -0.163025
texture = ExtResource("13_s5g3h")
expand_mode = 3
stretch_mode = 4
